# command-line-helper

./: .gitignore  Cargo.toml  README.md  TESTING.md  build.ps1  build_errors.txt  errors.txt  install.ps1  install.sh  sonar-project.properties
.github/workflows/: rust.yml
src/: config.rs  installer.rs  main.rs  modules.rs  utilities.rs
src/modules/: archive_module.rs  env_module.rs  format_module.rs  git_module.rs  hash_module.rs  language_identifier_module.rs  language_module.rs  logging_module.rs  network_module.rs  os_modules.rs  sample  search_data_module.rs  server_module.rs  system_module.rs  text_module.rs  youtube_module.rs
web/: index.html
