[package]
name = "command_line_helper"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
atty = "0.2.14"
clap = { version = "4.5.1", features = ["derive"] }
colored = "2.1.0"
glob = "0.3.1"
globwalk = "0.9.1"
log = "0.4.20"
log4rs = "1.3.0"
qstring = "0.7.2"
regex = "1.10.3"
reqwest = { version = "0.11.24", features = ["blocking"] }
rustube = "0.6.0"
serde = "1.0.197"
serde_json = "1.0.114"
termcolor = "1.4.1"
walkdir = "2.4.0"
which = "6.0.0"
youtube_dl = "0.9.0"
tokio = { version = "1", features = ["rt-multi-thread"] }

[workspace]
#members = ["modules"]