[package]
name = "command_line_helper"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
atty = "0.2.14"
clap = { version = "4.5.1", features = ["derive"] }
colored = "2.1.0"
glob = "0.3.1"
globwalk = "0.9.1"
log = "0.4.20"
log4rs = "1.3.0"
qstring = "0.7.2"
regex = "1.10.3"
reqwest = { version = "0.11.24", features = ["blocking"] }
serde = "1.0.197"
serde_json = "1.0.114"
termcolor = "1.4.1"
walkdir = "2.4.0"
which = "6.0.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util"] }

# New dependencies for enhanced features
sysinfo = "0.30"
sha2 = "0.10"
md-5 = "0.10"
base64 = "0.21"
url = "2.5"
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
serde_yaml = "0.9"
indicatif = "0.17"
dialoguer = "0.11"
git2 = "0.18"
trust-dns-resolver = "0.23"
toml = "0.8"
dirs = "5.0"

# Web server dependencies
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
mime_guess = "2.0"

[workspace]
#members = ["modules"]